--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,4 +1,16 @@
-p {
+.odd {
     background-color: rgba(255, 130, 151, 0.555);
     font-family: verdana, DejaVu ,Sans sans-serif;  
+}
+#blue {
+    color: rgba(0, 0, 255) ;
+    font-size: 36px;
+}
+#three{
+    font-size: 24px;
+}
+#four{
+    background-color: rgba(125, 214, 125, 0.63);
+    font-size: 24px;
+    font-weight: bold;
 }
