--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,12 +1,12 @@
 .odd {
     background-color: rgba(255, 130, 151, 0.555);
-    font-family: verdana, DejaVu ,Sans sans-serif;  
+    font-family: Verdana, "DejaVu Sans", sans-serif;  
 }
 #blue {
     color: rgba(0, 0, 255) ;
     font-size: 36px;
 }
-#three{
+.oddly-cool {
     font-size: 24px;
 }
 #four{
